# TrajectoryPlanner

./: README.md
Planer_os/: CMakeLists.txt  package.xml
Planer_os/include/: planer.h  traj_min_jerk.hpp
Planer_os/launch/: config.yaml  go.launch
Planer_os/src/: planer.cpp  run.cpp
Trajector_catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
Trajector_catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Trajector_catkin_ws/devel/.private/TrajectoryPlanner/: .rosinstall  local_setup.sh
Trajector_catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
Trajector_catkin_ws/devel/lib/TrajectoryPlanner/: TrajectoryPlanner
Trajector_catkin_ws/devel/lib/pkgconfig/: TrajectoryPlanner.pc  catkin_tools_prebuild.pc
Trajector_catkin_ws/devel/share/TrajectoryPlanner/cmake/: TrajectoryPlannerConfig-version.cmake  TrajectoryPlannerConfig.cmake
Trajector_catkin_ws/logs/TrajectoryPlanner/: build.check.015.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.025.log.stderr  build.make.033.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr
Trajector_catkin_ws/src/TrajectoryPlanner/: CMakeLists.txt  README.md  package.xml
Trajector_catkin_ws/src/TrajectoryPlanner/include/: camera_set.h  config.h  controller.h  filter.h  planner.h  ros_node.h
Trajector_catkin_ws/src/TrajectoryPlanner/launch/: config.yaml  go.launch
Trajector_catkin_ws/src/TrajectoryPlanner/src/: camera_set.cpp  controller.cpp  filter.cpp  planner.cpp  ros_node.cpp
extra/: mavros_posix_sitl.launch
extra/iris_fusion/: iris_fusion.sdf  model.config
extra/kinect_self/: kinect_self.sdf  model.config
pathing_get/: CMakeLists.txt  README.md  package.xml
pathing_get/configeration/: config.yaml
pathing_get/include/: config.h  controller.h  get_path.h  ros_node.h
pathing_get/launch/: go.launch  showpath.rviz
pathing_get/src/: controller.cpp  get_path.cpp  ros_node.cpp
(+7 files in other folders)
