<?xml version="1.0"?>
<package format="2">
  <name>pathing_get</name>
  <version>0.1.0</version>
  <description>The pathing_get package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->

  <!-- 开发人员的联系邮箱 -->
  <maintainer email="yyl@todo.todo">yyl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  
  <!-- 许可证书 -->
  <license>Apache 2.0</license>

	
  <!-- 编译依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <!-- 运行依赖 -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
